deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service-deployment
  template:
    metadata:
      labels:
        app: user-service-deployment
    spec:
      containers:
      - name: user-service-container
        image: <dockerhub-username>/marketplace-user-service:latest
        ports:
        - containerPort: 9001
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: default
spec:
  selector:
    app: user-service-deployment
  ports:
  - protocol: TCP
    port: 9001
    targetPort: 9001
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-service-deployment
  template:
    metadata:
      labels:
        app: product-service-deployment
    spec:
      containers:
      - name: product-service-container
        image: <dockerhub-username>/marketplace-product-service:latest
        ports:
        - containerPort: 9002
---
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: default
spec:
  selector:
    app: product-service-deployment
  ports:
  - protocol: TCP
    port: 9002
    targetPort: 9002
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service-deployment
  template:
    metadata:
      labels:
        app: order-service-deployment
    spec:
      containers:
      - name: order-service-container
        image: <dockerhub-username>/marketplace-order-service:latest
        ports:
        - containerPort: 9003
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: default
spec:
  selector:
    app: order-service-deployment
  ports:
  - protocol: TCP
    port: 9003
    targetPort: 9003
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: marketplace-ingress
  namespace: default
spec:
  rules:
  - http:
      paths:
      - path: /api/order/
        pathType: Prefix
        backend:
          service:
            name: order-service
            port:
              number: 9003
      - path: /api/orders/
        pathType: Prefix
        backend:
          service:
            name: order-service
            port:
              number: 9003
      - path: /api/review/
        pathType: Prefix
        backend:
          service:
            name: order-service
            port:
              number: 9003
      - path: /api/reviews/
        pathType: Prefix
        backend:
          service:
            name: order-service
            port:
              number: 9003
      - path: /api/user/
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 9001
      - path: /api/customer/
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 9001
      - path: /api/courier/
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 9001
      - path: /api/seller/
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 9001
      - path: /api/auth/
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 9001
      - path: /api/couriers/
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 9001
      - path: /api/sellers/
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 9001
      - path: /api/logo-upload-url
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 9001
      - path: /api/product/
        pathType: Prefix
        backend:
          service:
            name: product-service
            port:
              number: 9002
      - path: /api/products/
        pathType: Prefix
        backend:
          service:
            name: product-service
            port:
              number: 9002
      - path: /api/contract/
        pathType: Prefix
        backend:
          service:
            name: product-service
            port:
              number: 9002
      - path: /api/contracts/
        pathType: Prefix
        backend:
          service:
            name: product-service
            port:
              number: 9002
